--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:appcompat="http://schemas.android.com/tools">
+    <item
+        android:id="@+id/find"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:icon="@drawable/find"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/cart"
+        android:orderInCategory="100"
+        android:icon="@drawable/cart"
+        app:showAsAction="always"
+        />
 </menu>
